# cdl-tools

./: .gitignore  CONTRIBUTING  COPYING.GPL  Makefile.am  README.md  autogen.sh  cdl-tools.spec  configure.ac
benchmark/: README.md  cdl_bench.sh  cdl_plots.sh  cdl_prio_stats.sh
benchmark/scripts/: T2A.cdl  T2B.cdl  baseline_iops.gnuplot  baseline_lat_avg.gnuplot  baseline_lat_p99.gnuplot  bench_lib.sh  cdl_iops.gnuplot  cdl_lat_avg.gnuplot  cdl_lat_p99.gnuplot  ncqprio_iops.gnuplot  ncqprio_lat_avg.gnuplot  ncqprio_lat_p99.gnuplot
m4/: dontremove
man/: Makefile.am  cdladm.8
patches/fio/: README.md
patches/fio-3.28-and-older/: 0001-os-linux-Add-IORPIO_CLASS_DL-definition.patch  0002-libaio-io_uring-Add-the-cmdprio_split-option.patch  README.md
patches/fio-3.29-and-newer/: README.md
patches/linux-5.10.y/: 0001-libata-cleanup-NCQ-priority-handling.patch  0002-libata-Introduce-ncq_prio_supported-sysfs-sttribute.patch  0003-scsi-mpt3sas-Introduce-sas_ncq_prio_supported-sysfs-.patch  0004-docs-sysfs-block-device-document-ncq_prio_supported.patch  0005-libata-simplify-ata_scsi_rbuf_fill.patch  0006-libata-cleanup-device-sleep-capability-detection.patch  0007-libata-cleanup-ata_dev_configure.patch  0008-libata-fix-ata_read_log_page-warning.patch  0009-libata-print-feature-list-on-device-scan.patch  0010-ata-libata-eh-avoid-needless-hard-reset-when-revalid.patch  0010-ioprio-move-user-space-relevant-ioprio-bits-to-UAPI-.patch  0011-block-improve-ioprio-class-description-comment.patch  0011-ioprio-move-user-space-relevant-ioprio-bits-to-UAPI-.patch  0012-block-change-ioprio_valid-to-an-inline-function.patch  0012-block-improve-ioprio-class-description-comment.patch  0013-block-change-ioprio_valid-to-an-inline-function.patch  0013-block-fix-IOPRIO_PRIO_CLASS-and-IOPRIO_PRIO_VALUE-ma.patch  0014-block-Introduce-IOPRIO_NR_LEVELS.patch  0014-block-fix-IOPRIO_PRIO_CLASS-and-IOPRIO_PRIO_VALUE-ma.patch  0015-block-Introduce-IOPRIO_NR_LEVELS.patch  0015-block-fix-default-IO-priority-handling.patch  0016-block-fix-default-IO-priority-handling.patch  0016-scsi-core-Fix-scsi_mode_sense-buffer-length-handling.patch  0017-scsi-core-Fix-scsi_mode_select-buffer-length-handlin.patch  0017-scsi-core-Fix-scsi_mode_sense-buffer-length-handling.patch  0018-scsi-core-Fix-scsi_mode_select-buffer-length-handlin.patch  0018-scsi-sd-Fix-sd_do_mode_sense-buffer-length-handling.patch  0019-scsi-sd-Fix-sd_do_mode_sense-buffer-length-handling.patch  0019-scsi-simplify-scsi_get_vpd_page.patch  0020-scsi-core-Query-VPD-size-before-getting-full-page.patch  0020-scsi-fix-scsi_mode_select-interface.patch  0021-block-Introduce-duration-limits-priority-class.patch  0021-scsi-core-Fix-scsi_mode_select-interface.patch  0022-ata-libata-add-tracepoints-for-ATA-error-handling.patch  0022-block-Introduce-BLK_STS_DURATION_LIMIT.patch  0022-libata-improve-ata_scsiop_maint_in.patch  0023-ata-libata-move-ata_-port-link-dev-_dbg-to-standard-.patch  0023-ata-libata-scsi-Support-service-action-in-ata_scsiop.patch  0023-libata-detect-command-duration-limits-support.patch  0024-ata-add-use-ata_taskfile-error-status-fields.patch  (+61 more)
patches/linux-5.15.y/: 0001-ata-libata-eh-avoid-needless-hard-reset-when-revalid.patch  0001-scsi-core-Fix-scsi_mode_select-buffer-length-handlin.patch  0001-scsi-core-Fix-scsi_mode_sense-buffer-length-handling.patch  0002-block-fix-default-IO-priority-handling.patch  0002-scsi-core-Fix-scsi_mode_select-buffer-length-handlin.patch  0002-scsi-simplify-scsi_get_vpd_page.patch  0003-scsi-core-Fix-scsi_mode_select-buffer-length-handlin.patch  0003-scsi-fix-scsi_mode_select-interface.patch  0003-scsi-sd-Fix-sd_do_mode_sense-buffer-length-handling.patch  (+83 more)
src/: Makefile.am  cdl.c  cdl.h  cdl_ata.c  cdl_dev.c  cdl_scsi.c  cdl_utils.c  cdladm.c
tests/: cdl-tests.sh
tools/: cdl_bench.sh  cdl_gen_plots.sh  fio-prio-stats.sh
(+283 files in other folders)
